<?xml version="1.0" encoding="UTF-8"?>
<project xmlns = "http://maven.apache.org/POM/4.0.0"
         xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>vahy</groupId>
    <artifactId>master-thesis</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>Commons</module>
        <module>HallwayGame</module>
        <module>StateSpaceSearch</module>
        <module>ReinforcementLearning</module>
        <module>PaperSandbox</module>
        <module>MarketEnvironment</module>
        <module>RandomWalk</module>
        <module>EpisodeAnalyzer</module>
        <!--        <module>../Examples</module>-->
    </modules>

    <properties>

        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
        <maven.compiler.release>13</maven.compiler.release>
        <!--        <argLine>&#45;&#45;enable-preview</argLine>-->

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <checkstyle.config.path>${project.basedir}/build</checkstyle.config.path>

        <logback.version>1.1.11</logback.version>
        <slf4j.version>1.7.12</slf4j.version>
        <testng.version>6.14.3</testng.version>

    </properties>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>13</source>
                        <target>13</target>
                        <release>13</release>
                        <!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>scrutinize</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>validate</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>
                            <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failOnViolation>true</failOnViolation>
                            <violationSeverity>warning</violationSeverity>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                    </plugin>

                    <plugin>
                        <version>3.1.12.2</version>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <configuration>
                            <!--                    <excludeFilterFile>${project.basedir}/src/test/resources/findbugs-exclude.xml</excludeFilterFile>-->
                            <effort>Max</effort>
                            <threshold>Low</threshold>
                            <xmlOutput>true</xmlOutput>
                            <spotbugsXmlOutputDirectory>${project.build.directory}/findbugs</spotbugsXmlOutputDirectory>
                            <!--
                                NullAway checks NPE's;
                                FindUncalledPrivateMethods is broken
                            -->
                            <omitVisitors>FindNullDeref,InitializeNonnullFieldsInConstructor,CheckRelaxingNullnessAnnotation,LoadOfKnownNullValue,FindUncalledPrivateMethods</omitVisitors>
                        </configuration>
                        <executions>
                            <execution>
                                <id>analyze-compile</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>3.0.0</version>
                        <configuration>
                            <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>
                            <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>
                        </configuration>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
    </profiles>


</project>
